# chronomatrix

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  Makefile  README.md  chronomatrix.desktop  config.toml  flake.nix
src/: analog_clock.rs  clock_display.rs  config.rs  digit_display.rs  digit_patterns.rs  main.rs
